# visslidespdf

./: .gitignore
code/L01-solved/: CMakeLists.txt  l01.cpp
code/L01-solved/images/: Lenna.pgm
code/L01-solved/images/bayer_BGGR/: BGGR.pgm
code/L01-solved/images/bayer_GBRG/: GBRG.pgm
code/L01-solved/images/bayer_RGGB/: RGGB.pgm
code/L01a/: CMakeLists.txt  convolution.cpp
code/L01a-solved/: CMakeLists.txt  convolution.cpp
code/L02-solved/: .cproject  .project  CMakeLists.txt  exprunning.cpp  prevframe.cpp  running.cpp  simple.cpp
code/L03/: CMakeLists.txt  morpho.cpp
code/L03-solved/: CMakeLists.txt  bin.cpp  simple.cpp
code/L03/images/: organs.pgm
code/L04/: CMakeLists.txt  main.cpp  utils.h
code/L04-solved/: CMakeLists.txt  main.cpp  tags  utils.h
code/L04a-edges-solved/: CMakeLists.txt  a1.cpp  code.cpp
code/L04b/: CMakeLists.txt  main.cpp  utils.h
code/L04b-solved/: ex2_solved.kdev4  main.cpp  utils.h
code/L05-solved/: sad.cpp  sad_original.cpp  sad_working.cpp  simple.cpp
code/L05-solved/images/: L.pgm  R.pgm
